--- a/Visual II/FinalProject/pom.xml
+++ b/Visual II/FinalProject/pom.xml
@@ -17,5 +17,10 @@
             <version>8.3.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>net.openhft.com.binance.api</groupId>
+            <artifactId>binance-api-client</artifactId>
+            <version>2.17.1</version>
+        </dependency>
     </dependencies>
 </project>
