--- a/Visual II/Final Project/pom.xml
+++ b/Visual II/Final Project/pom.xml
@@ -22,6 +22,11 @@
             <version>2.7.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
     <name>Final Project</name>
 </project>
